etc/iptables/rules.v4
# Generated by iptables-save v1.8.11 (nf_tables) on Mon Apr  6 16:51:24 2026
*mangle
:PREROUTING ACCEPT [4731:4062459]
:INPUT ACCEPT [853:209374]
:FORWARD ACCEPT [3878:3853085]
:OUTPUT ACCEPT [881:165210]
:POSTROUTING ACCEPT [4759:4018295]

# mss
-A FORWARD -o tun+ -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -o wg+ -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu

# Direct routing
# RU network
-A PREROUTING -i eth0 -s 192.168.0.0/16 -m set --match-set RU_IPS dst -j MARK --set-xmark 0x64/0xffffffff
# IP address detection services
-A PREROUTING -i eth0 -s 192.168.0.0/16 -m set --match-set direct dst -j MARK --set-xmark 0x64/0xffffffff
# yotubeunblock
-A PREROUTING -i eth0 -s 192.168.0.0/16 -m set --match-set route_youtube dst -j MARK --set-xmark 0x64/0xffffffff

COMMIT

*nat
:PREROUTING ACCEPT [73008:3944944]
:INPUT ACCEPT [11981:544115]
:OUTPUT ACCEPT [3106:200860]
:POSTROUTING ACCEPT [2916:185133]
:USERS - [0:0]

# redirect dns
-A PREROUTING -s 192.168.0.0/16 -p udp -m udp --dport 53 -j DNAT --to-destination 10.1.2.1:53

# snat to wan
-A POSTROUTING -o wg+ -j MASQUERADE
-A POSTROUTING -o eth0 -j MASQUERADE

COMMIT
